# Anya-112

./: .dockerignore  .env.example  Dockerfile.backend  Dockerfile.frontend  README.md  README_SERVER2.md  docker-compose.yml  handoff.md  index.html  install_server2.sh  main.py  metadata.json  package-lock.json  package.json  pyproject.toml  requirements.txt  show_flow.sh  test_chat_flow.sh  test_live.py  test_minimal.py  tsconfig.json  vite.config.ts
app/: config.py  main.py
app/routers/: __init__.py  chat.py  image.py
app/services/: gemini.py
server2/: __init__.py  config.py  events.py  logging_utils.py  main.py  models.py  rag.py  worker.py
server2/agents/: __init__.py  emergency.py
server2/routers/: __init__.py  alerts.py  chat.py  events.py  image.py  racks.py  routing.py
server2/services/: __init__.py  incident_enrichment.py
server2/tools/: __init__.py  registry.py
server2/utils/: __init__.py  tts_helper.py
src/: index.css
src/components/: Dashboard.tsx  DepartmentBadges.tsx  LiveMap.tsx  RoutingAlert.tsx
src/lib/: gemini.ts  routing.ts
