[project]
name = "anya"
version = "0.1.0"
description = "Anya — 112 Emergency Dispatch Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.131.0",
    "google-genai>=1.64.0",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "uvicorn[standard]>=0.41.0",
]
